--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "api",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./server/bin/www",
+    "dev": "nodemon ./server/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.5",
